# develamp

./: .gitignore  FUI.h  GTKUI.cpp  GTKUI.h  GUI.h  Makefile  Makefile.am  README.md  UI.h  audio.h  bitshrieker.dsp  composite_dsp.cpp  composite_dsp.h  configure.ac  dsp.cpp  dsp.h  faustglue.cpp  gtk_knob.cpp  gtk_knob.h  jack-dsp.h  main.cpp  misc.h  reverb.dsp
m4/: ax_prog_faust_version.m4
src/: FUI.h  GTKUI.cpp  GTKUI.h  GUI.cpp  UI.h  bitshrieker.dsp  cleanamp.dsp  composite_dsp.cpp  composite_dsp.h  dsp.cpp  dsp.h  dsp_factory.cpp  dsp_factory.h  dsp_wrapper.cpp  dsp_wrapper.h  faustglue.cpp  gtk_knob.cpp  gtk_knob.h  gui.lib  main.cpp  null-dsp.h  plot_audio.h  reverb.dsp  spksim.dsp  util.lib  vumeter.dsp
src/guitarix/: gxamp.cpp
